--- a/css/style.less
+++ b/css/style.less
@@ -1,17 +1,39 @@
 @charset "utf-8";
-.radius(@radius:5px){
-    -webkit-border-radius: @radius;
-    -moz-border-radius: @radius;
-    -ms-border-radius: @radius;
-    -o-border-radius: @radius;
-    border-radius: @radius;
+.fl{float: left;}
+.fr{float: right;}
+.clearfix:after{content: '';display: block;clear: both;overflow:hidden;visibility:hidden;width:0;height:0;}
+.claerfix{zoom: 1;}
+.col{color: #d7000f;}
+@col: #d7000f;
+.bgf{background-color: #FFFFFF;}
+.ellipsis{white-space: nowrap;overflow: hidden;text-overflow: ellipsis;}
+.hide{display: none!important;}
+.show{display: block!important;}
+.ellipsis2(@n:2){display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: @n;overflow: hidden;text-overflow: ellipsis;}
+.ovh{overflow: hidden;}
+.imgBg{background-position: center center;background-repeat: no-repeat;background-size: cover;}
+.bg{position: fixed;left: 0;right: 0;top: 0;bottom: 0;background: rgba(0,0,0,0.5);z-index: 101;display: none;}
+.m-b-0{margin-bottom: 0!important;}
+.m-t-88{margin-top: 0.88rem!important;}
+.m-b-88{margin-bottom: 0.88rem!important;}
+.m-t-30{margin-top: 0.3rem!important;}
+
+.fc(@size,@col){
+    font-size: @size;
+    color: @col;
 }
-.btn{
-    .radius(10px);
+/*main*/
+.header{
+    line-height: 50px;
+    background: #f00f00;
+    text-align: center;
+    color: #FFF;
+    font-size: 26px;
 }
-.btn2{
-    .radius;
-}
-.btn3{
-    .radius(3px);
+.link_a{
+    display: block;
+    font-size: 16px;
+    margin: 100px auto;
+    text-decoration: underline;
+    text-align: center;
 }
